--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
   test:
     strategy:
       matrix:
-        node-version: [20.x, 22.x, 23.x]
+        node-version: [22.x, 23.x]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
