--- a/biome.json
+++ b/biome.json
@@ -1,10 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "organizeImports": {
-    "enabled": true
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
+  "vcs": {
+    "enabled": true,
+    "clientKind": "git",
+    "useIgnoreFile": true
   },
   "files": {
-    "ignore": ["**/dist/**", "**/package.json", "*.css.d.ts"]
+    "ignoreUnknown": true
   },
   "formatter": {
     "indentStyle": "space",
@@ -15,6 +17,14 @@
     "formatter": {
       "quoteStyle": "single",
       "jsxQuoteStyle": "single"
+    }
+  },
+  "assist": {
+    "enabled": true,
+    "actions": {
+      "source": {
+        "organizeImports": "on"
+      }
     }
   },
   "linter": {
@@ -37,7 +47,7 @@
         "noDelete": "off"
       },
       "suspicious": {
-        "noConsoleLog": "error",
+        "noConsole": "error",
         "noFallthroughSwitchClause": "error",
         "noExplicitAny": "warn",
         "noShadowRestrictedNames": "error"
@@ -49,7 +59,7 @@
   },
   "overrides": [
     {
-      "include": ["**/*.test.*"],
+      "includes": ["**/*.test.*"],
       "linter": {
         "rules": {
           "suspicious": {
