--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "version": "pnpm run build && changeset version"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "2.0.0-beta.1",
     "@changesets/changelog-github": "^0.5.1",
-    "@changesets/cli": "^2.28.1",
-    "@types/node": "^22.14.1",
+    "@changesets/cli": "^2.29.2",
+    "@types/node": "^22.15.2",
     "execa": "^9.5.2",
     "prettier": "^3.5.3",
     "strip-ansi": "^7.1.0",
-    "stylelint": "^16.18.0",
+    "stylelint": "^16.19.1",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
-    "turbo": "^2.5.0",
+    "turbo": "^2.5.2",
     "typescript": "~5.7.3",
-    "vitest": "^3.1.1"
+    "vitest": "^3.1.2"
   },
   "pnpm": {
     "patchedDependencies": {
