--- a/packages/cli/biome.json
+++ b/packages/cli/biome.json
@@ -1,24 +1,23 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./bin/", "./src/", "./test/", "*.tsx"],
-    "ignore": ["./test/fixtures/**/*.json", "./test/fixtures/**/*.js", "./test/fixtures/**/*.d.ts"]
+    "includes": ["./bin/", "./src/", "./test/", "*.tsx"]
   },
   "linter": {
     "rules": {
       "suspicious": {
-        "noConsoleLog": "off"
+        "noConsole": "off"
       }
     }
   },
   "overrides": [
     {
-      "include": ["./bin/cli.js"],
+      "includes": ["./bin/cli.js"],
       "linter": {
         "rules": {
           "suspicious": {
-            "noConsoleLog": "off"
+            "noConsole": "off"
           }
         }
       }
