--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -1,9 +1,8 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0.beta-1/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "ignore": ["./src/lib/code-frame.js"],
-    "include": ["./src/", "./test/"]
+    "includes": ["./src/", "./test/"]
   },
   "linter": {
     "rules": {
