--- a/packages/plugin-css/biome.json
+++ b/packages/plugin-css/biome.json
@@ -1,8 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/"],
-    "ignore": ["./test/fixtures/**/*.json", "./test/fixtures/**/*.css"]
+    "includes": ["./src/", "./test/"]
   }
 }
