--- a/packages/plugin-js/biome.json
+++ b/packages/plugin-js/biome.json
@@ -1,15 +1,7 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "include": ["./src/", "./test/"],
-    "ignore": [
-      "./test/fixtures/**/*.js",
-      "./test/fixtures/**/*.json",
-      "./test/fixtures/**/*.d.ts",
-      "./test/**/actual.*",
-      "./test/**/want.*",
-      "./test/types/"
-    ]
+    "includes": ["./src/", "./test/"]
   }
 }
