--- a/packages/use-color/biome.json
+++ b/packages/use-color/biome.json
@@ -1,4 +1,11 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
-  "extends": ["../../biome.json"]
+  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
+  "extends": ["../../biome.json"],
+  "linter": {
+    "rules": {
+      "correctness": {
+        "useHookAtTopLevel": "off"
+      }
+    }
+  }
 }
