--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -34,7 +34,7 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "0.7.1"
+    "@terrazzo/cli": "^0.7.0"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^"
