--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -33,8 +33,8 @@
     "test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "0.7.1",
-    "@terrazzo/plugin-css": "0.7.1"
+    "@terrazzo/cli": "^0.7.0",
+    "@terrazzo/plugin-css": "^0.7.0"
   },
   "dependencies": {
     "@terrazzo/token-tools": "workspace:^"
