--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@terrazzo/plugin-tailwind",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "private": true,
   "type": "module",
   "author": {
@@ -33,8 +33,8 @@
     "--disabled--test:ts": "tsc --noEmit"
   },
   "peerDependencies": {
-    "@terrazzo/cli": "0.7.1",
-    "@terrazzo/plugin-css": "0.7.1",
+    "@terrazzo/cli": "^0.7.0",
+    "@terrazzo/plugin-css": "^0.7.0",
     "tailwindcss": "*"
   },
   "dependencies": {
