--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,12 @@
 {
-  "$schema": "https://biomejs.dev/schemas/2.0.0-beta.1/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "vcs": {
     "enabled": true,
     "clientKind": "git",
     "useIgnoreFile": true
   },
   "files": {
+    "ignore": ["**/package.json", "**/test/fixtures/**", "**/test/**/want.*"],
     "ignoreUnknown": true
   },
   "formatter": {
@@ -15,16 +16,8 @@
   },
   "javascript": {
     "formatter": {
-      "quoteStyle": "single",
-      "jsxQuoteStyle": "single"
-    }
-  },
-  "assist": {
-    "enabled": true,
-    "actions": {
-      "source": {
-        "organizeImports": "on"
-      }
+      "jsxQuoteStyle": "single",
+      "quoteStyle": "single"
     }
   },
   "linter": {
@@ -59,7 +52,7 @@
   },
   "overrides": [
     {
-      "includes": ["**/*.test.*"],
+      "include": ["**/*.test.*"],
       "linter": {
         "rules": {
           "suspicious": {
