--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "version": "pnpm run build && changeset version"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.0.0-beta.1",
+    "@biomejs/biome": "1.9.4",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.3",
     "@types/node": "^22.15.17",
@@ -27,7 +27,7 @@
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.5.3",
-    "typescript": "~5.8.3",
+    "typescript": "^5.8.3",
     "vitest": "^3.1.3"
   },
   "pnpm": {
