--- a/packages/parser/biome.json
+++ b/packages/parser/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/2.0.0.beta-1/schema.json",
   "extends": ["../../biome.json"],
   "files": {
-    "includes": ["./src/", "./test/"]
+    "include": ["./src/", "./test/"]
   },
   "linter": {
     "rules": {
