feat(token-tools+plugin-sass): Added initial font shorthand support
* token-tools: Added support for font shorthand

* plugin-sass: Rewrote plugin and added support for font shorthand

* plugin-css: Updated `generateShorthand` args

* tokens: Added initial test tokens (will be removed before PR)

--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@terrazzo/cli": "workspace:^",
     "@terrazzo/plugin-css": "workspace:^",
+    "@terrazzo/plugin-sass": "workspace:^",
     "@terrazzo/token-tools": "workspace:^"
   }
 }
