--- a/packages/token-lab/tsconfig.json
+++ b/packages/token-lab/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "extends": "../../tsconfig.react.json",
   "compilerOptions": {
+    "baseUrl": "src",
     "incremental": true,
-    "baseUrl": ".",
     "outDir": "dist"
   },
-  "include": ["src"]
+  "include": ["./src/"]
 }
