--- a/www/tsconfig.json
+++ b/www/tsconfig.json
@@ -14,8 +14,7 @@
     "noEmit": true,
     "noEmitOnError": false,
     "resolveJsonModule": true,
-    "skipLibCheck": true,
     "types": ["vite/client"]
   },
-  "include": ["src"]
+  "include": ["./src./"]
 }
