--- a/packages/plugin-sass/package.json
+++ b/packages/plugin-sass/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@terrazzo/plugin-sass",
-  "description": "Generate scss/sass from your design tokens schema (requires @terrazzo/cli)",
   "version": "0.7.4",
+  "description": "Generate .scss from your DTCG design tokens JSON.",
+  "license": "MIT",
   "type": "module",
   "author": {
     "name": "Drew Powers",
@@ -14,20 +15,25 @@
     "css",
     "sass"
   ],
-  "main": "./dist/index.js",
+  "main": "./dist/index.mjs",
+    "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "default": "./dist/index.mjs"
+    },
+    "./package.json": "./package.json"
+  },
   "homepage": "https://terrazzo.app/docs/cli/integrations/sass",
   "repository": {
     "type": "git",
     "url": "https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-sass"
   },
-  "license": "MIT",
   "scripts": {
-    "build": "pnpm run build:ts && pnpm -w run inject-license @terrazzo/plugin-sass dist/index.js",
-    "build:ts": "tsc -p tsconfig.build.json",
-    "dev": "tsc -p tsconfig.build.json -w",
+    "build": "unbuild && attw --profile node16 --pack .",
+    "dev": "unbuild -w",
     "format": "biome check --fix --unsafe .",
-    "lint": "pnpm --filter @terrazzo/plugin-sass run \"/^lint:.*/\"",
+    "lint": "pnpm --filter @terrazzo/plugin-sass run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "test": "vitest run"
