--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "version": "pnpm run build && changeset version"
   },
   "devDependencies": {
+    "@arethetypeswrong/cli": "^0.18.1",
     "@biomejs/biome": "1.9.4",
     "@changesets/changelog-github": "^0.5.1",
     "@changesets/cli": "^2.29.4",
@@ -28,6 +29,7 @@
     "stylelint-order": "^6.0.4",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
+    "unbuild": "^3.5.0",
     "vitest": "^3.1.4"
   },
   "pnpm": {
