Package with Rolldown

--- a/package.json
+++ b/package.json
@@ -23,13 +23,14 @@
     "@types/node": "^22.15.29",
     "execa": "^9.6.0",
     "prettier": "^3.5.3",
+    "rolldown": "1.0.0-beta.10",
+    "rolldown-plugin-dts": "^0.13.7",
     "strip-ansi": "^7.1.0",
     "stylelint": "^16.20.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-order": "^6.0.4",
     "turbo": "^2.5.4",
     "typescript": "^5.8.3",
-    "unbuild": "^3.5.0",
     "vitest": "^3.1.4"
   },
   "pnpm": {
