--- a/packages/plugin-swift/package.json
+++ b/packages/plugin-swift/package.json
@@ -16,12 +16,9 @@
     "swift",
     "ios"
   ],
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    },
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "homepage": "https://terrazzo.app/docs/cli/integrations/swift",
@@ -31,8 +28,8 @@
     "directory": "./packages/plugin-swift/"
   },
   "scripts": {
-    "build": "unbuild && attw --profile node16 --pack .",
-    "dev": "unbuild -w",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
+    "dev": "rolldown -c -w",
     "format": "biome check --fix --unsafe .",
     "lint": "biome check .",
     "test": "vitest run"
@@ -45,6 +42,7 @@
     "culori": "^4.0.1"
   },
   "devDependencies": {
+    "@terrazzo/cli": "workspace:*",
     "@terrazzo/parser": "workspace:^",
     "@types/culori": "^4.0.0"
   }
