--- a/packages/parser/package.json
+++ b/packages/parser/package.json
@@ -22,12 +22,9 @@
     "linting",
     "lint"
   ],
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    },
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "homepage": "https://terrazzo.app/docs/cli/api/js",
@@ -37,9 +34,9 @@
     "directory": "./packages/parser/"
   },
   "scripts": {
-    "build": "unbuild && attw --profile node16 --pack .",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
     "dev": "pnpm run build --watch",
-    "lint": "pnpm --filter @terrazzo/parser run \"/^lint:(js|ts)$/\"",
+    "lint": "pnpm --filter @terrazzo/parser run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "test": "vitest run"
@@ -50,12 +47,10 @@
     "@types/babel__code-frame": "^7.0.6",
     "@types/culori": "^4.0.0",
     "culori": "^4.0.1",
-    "is-what": "^4.1.16",
     "merge-anything": "^5.1.7",
     "picocolors": "^1.1.1",
     "scule": "^1.3.0",
-    "wildcard-match": "^5.1.4",
-    "yaml": "^2.8.0"
+    "wildcard-match": "^5.1.4"
   },
   "devDependencies": {
     "yaml-to-momoa": "^0.0.3"
