--- a/packages/plugin-css/tsconfig.json
+++ b/packages/plugin-css/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": "src",
-    "incremental": true,
     "outDir": "dist"
   },
-  "include": ["./src/", "./test/", "../cli/test/fixtures/build-default"]
+  "include": ["./src/", "./test/"]
 }
