--- a/packages/plugin-js/package.json
+++ b/packages/plugin-js/package.json
@@ -16,12 +16,9 @@
     "ts",
     "typescript"
   ],
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    },
+    ".":"./dist/index.js",
     "./package.json": "./package.json"
   },
   "homepage": "https://terrazzo.app/docs/cli/integrations/js",
@@ -31,8 +28,8 @@
     "directory": "./packages/plugin-js/"
   },
   "scripts": {
-    "build": "unbuild && attw --profile node16 --pack .",
-    "dev": "unbuild -w",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
+    "dev": "rolldown -c -w",
     "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/plugin-js run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
