--- a/packages/plugin-swift/tsconfig.json
+++ b/packages/plugin-swift/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "baseUrl": "src",
-    "incremental": true,
     "outDir": "dist"
   },
-  "include": ["./src/", "./test/"]
+  "include": ["./src/", "./test/**/*.test.ts"]
 }
