--- a/packages/plugin-tailwind/package.json
+++ b/packages/plugin-tailwind/package.json
@@ -21,17 +21,14 @@
     "url": "https://github.com/terrazzoapp/terrazzo.git",
     "directory": "packages/plugin-tailwind"
   },
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    },
+    ".": "./dist/index.js",
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "unbuild && attw --profile node16 --pack .",
-    "dev": "unbuild -w",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
+    "dev": "rolldown -c -w",
     "format": "biome check --fix --unsafe .",
     "lint": "pnpm --filter @terrazzo/plugin-tailwind run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
