--- a/packages/token-tools/package.json
+++ b/packages/token-tools/package.json
@@ -27,30 +27,20 @@
     "url": "https://github.com/terrazzoapp/terrazzo.git",
     "directory": "./packages/token-tools/"
   },
-  "main": "./dist/index.mjs",
+  "main": "./dist/index.js",
   "exports": {
-    ".": {
-      "require": "./dist/index.cjs",
-      "default": "./dist/index.mjs"
-    },
-    "./css": {
-      "require": "./dist/css/index.cjs",
-      "default": "./dist/css/index.mjs"
-    },
-    "./js": {
-      "require": "./dist/js/index.cjs",
-      "default": "./dist/js/index.mjs"
-    },
+    ".":"./dist/index.js",
+    "./css": "./dist/css.js",
+    "./js":  "./dist/js.js",
     "./package.json": "./package.json"
   },
   "scripts": {
-    "build": "unbuild && attw --profile node16 --pack .",
-    "dev": "pnpm --filter @terrazzo/token-tools run --parallel \"/^dev:.*/\"",
-    "lint": "pnpm --filter @terrazzo/token-tools run \"/^lint:(js|ts)$/\"",
+    "build": "rolldown -c && attw --profile esm-only --pack .",
+    "dev": "rolldown -c -w",
+    "lint": "pnpm --filter @terrazzo/token-tools run \"/^lint:(js|ts)/\"",
     "lint:js": "biome check .",
     "lint:ts": "tsc --noEmit",
     "format": "biome check --fix --unsafe .",
-    "dev:ts": "tsc -p tsconfig.build.json --watch",
     "test": "vitest run"
   },
   "dependencies": {
